src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__global_initializers__initial_values_in_global_constant_variables.snap
---
source: src/codegen/tests/initialization_test/global_initializers.rs
assertion_line: 38
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@c_INT = addrspace(4) global i16 7
@c_3c = addrspace(4) global i16 21
@c_BOOL = addrspace(4) global i1 true
@c_not = addrspace(4) global i1 false
@c_str = addrspace(4) global [81 x i8] c"Hello\00"
@c_wstr = addrspace(4) global [81 x i16] [i16 87, i16 111, i16 114, i16 108, i16 100, i16 0]
@c_real = addrspace(4) global float 0x40091EB860000000
@c_lreal = addrspace(4) global double 3.141500e+00
@x = addrspace(4) global i16 7
@y = addrspace(4) global i16 14
@z = addrspace(4) global i16 32
@b = addrspace(4) global i1 true
@nb = addrspace(4) global i1 false
@bb = addrspace(4) global i1 false
@str = addrspace(4) global [81 x i8] c"Hello\00"
@wstr = addrspace(4) global [81 x i16] [i16 87, i16 111, i16 114, i16 108, i16 100, i16 0]
@r = addrspace(4) global float 0x3FF91EB860000000
@tau = addrspace(4) global double 6.283000e+00

