src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__global_initializers__initial_values_in_global_variables.snap
---
source: src/codegen/tests/initialization_test/global_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@x = global i16 7
@y = global i1 true
@z = global float 0x400921CAC0000000

