src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__global_initializers__uninitialized_global_array.snap
---
source: src/codegen/tests/initialization_test/global_initializers.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

@a = global [2 x i8] zeroinitializer

